--- a/src/app/pages/guides/cfar-exercise-flow/cfar-exercise-flow.component.html
+++ b/src/app/pages/guides/cfar-exercise-flow/cfar-exercise-flow.component.html
@@ -14,7 +14,7 @@
                     [imageBasePath]="imageBasePath"
                     [currentLang]="currentLang"
                     [hCSessionId]="hCSessionId"
-                    [contractId]="contractId"
+                    [exerciseId]="exerciseId"
                     [hyperwalletUrl]="hyperwalletUrl"
                     (airlineRefundSelected)="onAirlineRefundSelected($event)"
                     (flowCompleted)="onFlowCompleted()"
