HCAP-264 Manage redirection token when processing a refund

--- a/src/app/pages/guides/cfar-exercise-flow/cfar-exercise-flow.component.html
+++ b/src/app/pages/guides/cfar-exercise-flow/cfar-exercise-flow.component.html
@@ -17,7 +17,7 @@
                     [exerciseId]="exerciseId"
                     [hyperwalletUrl]="hyperwalletUrl"
                     (airlineRefundSelected)="onAirlineRefundSelected($event)"
-                    (flowCompleted)="onFlowCompleted()"
+                    (flowCompleted)="onFlowCompleted($event)"
                 ></hopper-cfar-exercise-flow>
             </div>
         </mat-tab>
