Next release exercise in claims (#18)
* HCAP-265 Adjust cfar exercise flow component with new input parameters

* HCAP-264 Manage redirection token when processing a refund

* HCAP-264 Update versions number

* HCAP-264 Update the changeLOG

Co-authored-by: ogasparini <ogasparini@hopper.com>

--- a/src/app/pages/guides/cfar-exercise-flow/cfar-exercise-flow.component.html
+++ b/src/app/pages/guides/cfar-exercise-flow/cfar-exercise-flow.component.html
@@ -14,10 +14,10 @@
                     [imageBasePath]="imageBasePath"
                     [currentLang]="currentLang"
                     [hCSessionId]="hCSessionId"
-                    [contractId]="contractId"
+                    [exerciseId]="exerciseId"
                     [hyperwalletUrl]="hyperwalletUrl"
                     (airlineRefundSelected)="onAirlineRefundSelected($event)"
-                    (flowCompleted)="onFlowCompleted()"
+                    (flowCompleted)="onFlowCompleted($event)"
                 ></hopper-cfar-exercise-flow>
             </div>
         </mat-tab>
