--- a/src/app/pages/guides/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/src/app/pages/guides/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -15,6 +15,7 @@
                     [currentLang]="currentLang"
                     [hCSessionId]="hCSessionId"
                     [itineraries]="itineraries"
+                    [uiVariant]="uiVariant"
                     (chooseCoverage)="onChooseCoverage($event)"
                     (offersLoaded)="onOffersLoaded($event)"
                 ></hopper-cfar-offer-banner-large>
