--- a/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.scss
+++ b/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.scss
@@ -39,10 +39,10 @@
             color: map-get($primary-palette, "900-contrast");
             margin: 0px;
 
-            .powered-by-container {
+            .provided-by-container {
                 height: 0px;
 
-                .powered-by-image {
+                .provided-by-image {
                     margin-top: 1rem;
                     height: 2rem;
                 }
