--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
@@ -44,7 +44,7 @@
             border: 1px solid map-get($accent-palette, "A200") !important;
             border-radius: 0px;
 
-            .powered-by-image {
+            .provided-by-image {
                 margin-top: 1rem;
                 height: 2rem;
             }
