--- a/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
@@ -10,8 +10,8 @@
         </button>
     </div>
 
-    <div fxFlex="100" class="powered-by-container">
-        <img class="powered-by-image" src="{{ imageBasePath || '' }}assets/powered-by-hopper.svg" />
+    <div fxFlex="100" class="provided-by-container">
+        <img class="provided-by-image" src="{{ imageBasePath || '' }}assets/provided-by-hopper.svg" />
     </div>
 
 </div>
