--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
@@ -87,6 +87,10 @@
                 }
             }
 
+            .incl-taxes {
+                color: map-get($fg-palette, "secondary-text")
+            }
+
             a {
                 color: map-get($accent-palette, default);
             }
