--- a/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.scss
+++ b/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.scss
@@ -97,6 +97,10 @@
                     font-weight: bold;
                     margin-right: 8px;
                 }
+
+                .incl-taxes {
+                    color: map-get($fg-palette, "secondary-text")
+                }
             }
         }
 
