HCAP-302 create a dedicated model + the output event emitter

--- a/src/app/pages/guides/cfar-exercise-flow/cfar-exercise-flow.component.html
+++ b/src/app/pages/guides/cfar-exercise-flow/cfar-exercise-flow.component.html
@@ -18,6 +18,7 @@
                     [hyperwalletUrl]="hyperwalletUrl"
                     (airlineRefundSelected)="onAirlineRefundSelected($event)"
                     (flowCompleted)="onFlowCompleted($event)"
+                    (errorOccurred)="onErrorOccurred($event)"
                 ></hopper-cfar-exercise-flow>
             </div>
         </mat-tab>
