--- a/src/app/pages/guides/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/src/app/pages/guides/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -19,6 +19,7 @@
                     [uiVariant]="uiVariant"
                     (chooseCoverage)="onChooseCoverage($event)"
                     (offersLoaded)="onOffersLoaded($event)"
+                    (errorOccurred)="onErrorOccurred($event)"
                 ></hopper-cfar-offer-banner-large>
             </div>
         </mat-tab>
