--- a/src/app/pages/guides/cfar-offer-banner/cfar-offer-banner.component.html
+++ b/src/app/pages/guides/cfar-offer-banner/cfar-offer-banner.component.html
@@ -16,6 +16,7 @@
                     [itineraries]="itineraries"
                     (offerAccepted)="onOfferAccepted($event)"
                     (offersLoaded)="onOffersLoaded($event)"
+                    (errorOccurred)="onErrorOccurred($event)"
                 ></hopper-cfar-offer-banner>
             </div>
         </mat-tab>
