--- a/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
@@ -44,9 +44,14 @@
                     [ngClass]="{ 'active': offer == selectedCfarOffer }">
                     <div fxFlex="100"  fxLayout="row wrap" fxLayoutAlign="start center" (click)="onSelectOffer(offer)">
                         <h3 fxFlex="100" class="offer-title" 
-                            attr.aria-label="{{ 'COMMON.COVERAGE_PERCENTAGE' | translate: 
-                                { coverage: (offer.coveragePercentage | number: '1.0-0') }
-                            }}"
+                            attr.aria-label="
+                            {{ 'COMMON.COVERAGE_PERCENTAGE_ACCESSIBILITY' | translate: 
+                                { 
+                                    coverage: (offer.coveragePercentage | number: '1.0-0'),
+                                    price: (getPricePerTraveler(offer) | currency:offer?.currency:'symbol':undefined:currentLang)
+                                }
+                            }}
+                            "
                         >
                             {{ 'COMMON.COVERAGE_PERCENTAGE' | translate: 
                                 { coverage: (offer.coveragePercentage | number: '1.0-0') }
